@@ -47,15 +47,14 @@
 ### slowness
 
 - decreasing `-XX:CompileThreshold` (under 7500) as well as JRuby's JIT treshold
-  makes overall performance numbers worse ...
-  * e.g. [run-07_7](run-07_7.md) versus [run-07_8](run-07_8.md)
+  ~~makes overall performance numbers worse~~
+  * e.g. ~~[run-07_7](run-07_7.md) versus [run-07_8](run-07_8.md)~~
 
 - using native thread priorities degrade performance significantly
   * TOTAL |  33279 |   43269 |  54858 (100 users -XX:+UseThreadPriorities)
   * TOTAL |  99043 |   14529 |  13647 (100 users)
   * see [run-07_3](run-07_3.md) versus [run-07_4](run-07_4.md)
-  
-  **TODO** should be double checked / confirmed ...
+  * see [run-09_2](run-09_2.md) versus [run-09_3](run-09_3.md)
 
 - potentially high rate of exceptions generated on each request from JRuby
   * NoMethodError : undefined method `fractional' for 1000:Fixnum from 
@@ -74,7 +73,7 @@
   
 #### libraries
 
-- gem json 1.8.2 (was 1.8.1) seems to be causing a major slow-down
+- **TODO** gem json 1.8.2 (was 1.8.1) seems to be causing a major slow-down ?!?
   ... it includes a JRuby specific fix that should have improved performance
 
 - updating money 6.2.1 (was 6.1.1) + monetize 0.4.1 (was 0.3.0)
@@ -95,3 +94,12 @@
   
 - Java::JavaLang::Enum.value_of patches avoid (1 for 2 argument) Ruby exceptions 
   (coming from JRuby's Java support under concurrent invocations)
+
+### jj-opts
+
+- `-XX:+UseConcMarkSweepGC` makes sense compared to default GC on Java 7(u72)
+- no gain really going with `-XX:CompileThreshold` < 7000
+- no gain really going with `-Djruby.jit.treshold` <= 30
+- minor difference but no errors `-Djruby.compile.fastest=true`
+- do not use ~~`-XX:+UseThreadPriorities`~~
+- perm-gen never really grows after start from ~ 110M (allocated size 180M)
